[package]
name = "tlsh_benchmark"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
publish = false

[dependencies]
fastrand = "2.3.0"
fake = { version = "4.3.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
divan = "0.1.21"

fast-tlsh = "0.1.8"
tlsh2 = { version = "0.4.0", features = ["diff", "fast"] }
simbiota-tlsh = "1.1.1"

[[bench]]
name = "tlsh_build_bench"
path = "benches/tlsh_build_bench.rs"
harness = false

[[bench]]
name = "tlsh_diff_bench"
path = "benches/tlsh_diff_bench.rs"
harness = false